--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -32,8 +32,8 @@
 
 .background-des{
     background-image: url('/assets/images/background-forLogin.png');
-    height: 700px;
     padding-top: 100px;
+    padding-bottom: 200px;
 }
 
 
