--- a/src/app/weather-actual-location/weather-actual-location.component.scss
+++ b/src/app/weather-actual-location/weather-actual-location.component.scss
@@ -12,7 +12,7 @@
 .adress{
     font-size: 20px;
     font-family: 'Trebuchet MS';
-  //  color: whitesmoke;
+
 }
 .temperature{
     font-size: 100px;
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    font-family: audiowide;   
+    font-family: Montserrat;   
 }
 .mb-20{
     margin-bottom: 20px;
