--- a/src/app/weather-hour-item/weather-hour-item.component.scss
+++ b/src/app/weather-hour-item/weather-hour-item.component.scss
@@ -31,12 +31,20 @@
 
   .temp{
       flex-direction: row;
-      font-size: 20px;
+      font-size: 18px;
+  }
+
+  .day{
+    border: 1px solid white;
+    text-decoration: underline;
+    width: 40px;
+    border-radius: 2px;
+    text-align: center;
   }
 
   .humidity{
-    font-size: 18px;
-    opacity: 40%;
+    font-size: 14px;
+    //opacity: 40%;
   }
   .col-md-for-hour{
     position: relative;
