--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
         <div class="card-login">
             <h2>Login</h2>
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div *ngIf="loginForm.invalid" class="error-label mb-4">
+                <div *ngIf="!error === ''" class="error-label mb-4">
                     <i class="fa fa-exclamation-circle"></i> {{error}}
                 </div>
                 <div class="form-group mb-5">
@@ -27,11 +27,11 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button [disabled]="loading" class="btn btn-violet">
+                    <button [disabled]="loginForm.invalid" class="btn btn-violet">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Login
                     </button>
-                    <a routerLink="/register" class="btn btn-link">Register</a>
+                    <a routerLink="/signup" class="btn btn-link">Register</a>
                 </div>
             </form>
         </div>   
