--- a/src/app/weather-actual-location/weather-actual-location.component.html
+++ b/src/app/weather-actual-location/weather-actual-location.component.html
@@ -1,13 +1,11 @@
 <div class="container">
-    <div class="actual-situation" style="margin-bottom: 150px; margin-top:100px;">
+    <div class="actual-situation">
         <div class="row">
             <div class="col-md-4 offset-md-2">
                 <div class="content-info-sup"> 
                     <div class="mb-20">Humidité &nbsp; &nbsp; {{humidite}}</div>
                     <div class="mb-20">Pression &nbsp; &nbsp; {{pression}}</div>
-                    <!-- <div class="mb-20">Feels like 51°</div>
-                    <div class="mb-20">Visibility 21mi</div>
-                    <div class="mb-20">Dew point 39°</div> -->
+                    <div class="mb-20">Vitesse du vent &nbsp; &nbsp; {{windSpeed}}</div>
                 </div>
             </div>
             <div class="col-md-4 offset-md-2">
@@ -17,7 +15,6 @@
                     <div class="col-md-4"></div>  
                 </div>
                 <div class="row date"> {{date}} </div>
-                <!-- <div class="row hour"> 15:45 </div> -->
             </div>
         </div>   
     </div>
