--- a/src/app/weather-hour-item/weather-hour-item.component.html
+++ b/src/app/weather-hour-item/weather-hour-item.component.html
@@ -1,5 +1,6 @@
 <div class="card">
-   <div class="hour">  {{hour}} </div>
+   <div class="day" *ngIf="hour === undefined" >  {{day}} </div>
+   <div class="hour" *ngIf="day === undefined" >  {{hour}} </div>
    <div class="img-cloud"> <img src="{{image_url}}" height="80"/> </div> 
    <div class="temp"> {{temperature}} <span class="humidity">{{humidite}}</span> </div>
 </div>
