databaseManager_and new FolderImages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,11 @@
         </button>
         <div class="collapse navbar-collapse"  id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item" routerLinkActive="active"><a routerLink="home">Accueil</a></li>               
+              <li class="nav-item pd-r10" routerLinkActive="active"><a routerLink="home">Accueil</a></li>
+              <li class="nav-item pd-r10" routerLinkActive="active"><a routerLink="profile"> Profile </a></li>               
             </ul>
         </div>
+        <button class="btn btn-flat"><a routerLink="auth"> Se deconnecter </a></button>
     </nav>
 </header>
 <div class="contain">
