--- a/src/app/weather-actual-location/weather-actual-location.component.html
+++ b/src/app/weather-actual-location/weather-actual-location.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-    <div class="actual-situation">
+    <div class="actual-situation" style="margin-top : 80px; margin-bottom: 100px;">
         <div class="row">
             <div class="col-md-4 offset-md-2">
                 <div class="content-info-sup"> 
-                    <div class="mb-20">Humidité &nbsp; &nbsp; {{humidite}}</div>
-                    <div class="mb-20">Pression &nbsp; &nbsp; {{pression}}</div>
-                    <div class="mb-20">Vitesse du vent &nbsp; &nbsp; {{windSpeed}}</div>
+                    <div class="mb-20"><img src="/assets/images/instruments/hygrometer.png" height="16" width="14"> Humidité &nbsp; &nbsp; {{humidite}}</div>
+                    <div class="mb-20"><img src="/assets/images/instruments/barometer.png" height="18" width="16"> Pression &nbsp; &nbsp; {{pression}}</div>
+                    <div class="mb-20"><img src="/assets/images/instruments/windspeed_mesurer.png" height="18" width="16"> Vitesse du vent &nbsp; &nbsp; {{windSpeed}}</div>
                 </div>
             </div>
             <div class="col-md-4 offset-md-2">
