--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -30,8 +30,20 @@
     background-color: white;    
 }
 
+
+@media(max-width : 420px){
+    .card-login{
+        margin-top: 200px;
+        width: 300px;
+        padding: 10px;
+        box-shadow: 5px 5px 5px violet;
+        margin: auto;
+        background-color: white;    
+    }
+    
+}
 .background-des{
-    background-image: url('/assets/images/background-forLogin.png');
+    background-image: url('/assets/images/fonds/background-forLogin.png');
     padding-top: 100px;
     padding-bottom: 200px;
 }
